# todoproject

./: README.md  db.sqlite3  pyproject.toml
auth/: routers.py  tests.py
auth/serializers/: __init__.py  login.py  register.py
auth/viewsets/: __init__.py  login.py  refresh.py  register.py
clientapp/: package-lock.json  package.json
clientapp/src/: App.js  index.js
clientapp/src/components/: LoginForm.jsx  RegistrationForm.jsx
clientapp/src/helpers/: axios.js
clientapp/src/pages/: Home.jsx  Login.jsx  Registration.js
clientapp/src/routes/: ProtectedRoute.jsx
todo/: admin.py  models.py  routers.py  serializers.py  viewsets.py
todo/migrations/: 0001_initial.py  0002_rename_title_todo_task_remove_todo_description.py  0002_todo_user.py  0003_alter_todo_user.py  0003_alter_user_email.py  0004_alter_todo_user.py  0005_userprofile.py  0006_alter_todo_user.py
todo/tests/: test_model.py  test_todo_model.py  test_viewsets.py
todoproject/: settings.py  urls.py
